--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,15 @@
   "extends": "astro/tsconfigs/strict",
   "include": [".astro/types.d.ts", "**/*"],
   "exclude": ["dist"],
-	"extends": "astro/tsconfigs/base"
+	"extends": "astro/tsconfigs/base",
+	"compilerOptions": {
+		 "baseUrl": ".",
+		"paths": {
+		  "@/*": [
+			"./src/*"
+		  ]
+		}
+	}
   // "compilerOptions": {
   //   "strictNullChecks": true, // add if using `base` template
   //   "allowJs": true // required, and included with all Astro templates
